# mmmul

./: CMakeLists.txt  main.cpp
include/: Mat.hpp  Matrix.hpp  index_sequence.hpp  operations.hpp  utility.hpp
include/concepts/: Printable.hpp
src/: utility.cpp
